# Crust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
crust-example-plugin/: Cargo.toml  crust-plugin.json
crust-example-plugin/src/: lib.rs
crust-plugin-sdk/: Cargo.toml
crust-plugin-sdk/src/: lib.rs  lowlevel.rs
src/: auth.rs  haproxy.rs  main.rs  permission.rs  util.rs  version.rs
src/auth/: mod.rs
src/chat/: json.rs  mod.rs
src/haproxy/: mod.rs
src/plugin/: api.rs  mod.rs
src/server/: backend.rs  brigadier.rs  compression.rs  encryption.rs  initial_handler.rs  mod.rs  nbt.rs  packet_handler.rs  packet_ids.rs  packets.rs  proxy_handler.rs  status.rs
src/server/command/: core_impl.rs  mod.rs
src/server/commands/: mod.rs
