[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug-assertions = true
overflow-checks = false
panic = "abort"

[profile.release]
debug-assertions = false
overflow-checks = false
panic = "abort"
lto = true
opt-level = 3
debug = false
strip = true
codegen-units = 1

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
cesu8 = "1.1.0"
digest = "0.10.7"
either = "1.13.0"
env_logger = "0.11.5"
hex = "0.4.3"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
md5 = "0.7.0"
num-bigint = "0.4.6"
num_cpus = "1.16.0"
rand = "0.8.5"
rsa = { version = "0.9.7", features = ["pem"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha1 = "0.10.6"
slotmap = "1.0.7"
tokio = { version = "1.42.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
paste = "1.0.15"
const_format = "0.2.34"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.9"  }

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = { version = "1.0.35", features = ["zlib-ng"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
flate2 = { version = "1.0.35", features = ["cloudflare_zlib"], default-features = false }